@@ -107,62 +107,7 @@ static const RegisterDescriptorType ep3000z_reg_02[] = {
 
 /*
  * Register 3: shutter speed, not on ep3000z
- * TOCHEK.
  */
-/*#ifdef RANGE_FOR_SHUTTER
-static const ValueNameType ep3000z_reg_03_val_names[] = {
-	{
-		{ range: { 0, 16000000, 1000 } }, NULL
-	}
-}; 
-static const RegisterDescriptorType ep3000z_reg_03[] = {
-	{
-		GP_WIDGET_RANGE, GP_REG_NO_MASK,
-		"shutter", N_("Shutter Speed microseconds (0 auto)"),
-		VAL_NAME_INIT (ep3000z_reg_03_val_names)
-	}
-};
-#else
-static const ValueNameType ep3000z_reg_03_val_names[] = { 
-	{ {       0 }, N_("Auto") },
-	{ {    1250 }, "1/800" },
-	{ {    2000 }, "1/500" },
-	{ {    2500 }, "1/400" },
-	{ {    4000 }, "1/250" },
-	{ {    5000 }, "1/200" },
-	{ {    6250 }, "1/160" },
-	{ {    8000 }, "1/125" },
-	{ {   10000 }, "1/100" },
-	{ {   12500 }, "1/80" },
-	{ {   16666 }, "1/60" },
-	{ {   20000 }, "1/50" },
-	{ {   33333 }, "1/30" },
-	{ {   40000 }, "1/25" },
-	{ {   66667 }, "1/15" },
-	{ {  100000 }, "1/10" },
-	{ {  125000 }, "1/8" },
-	{ {  200000 }, "1/4" },
-	{ {  500000 }, "1/2" },
-	{ { 1000000 }, "1" },
-	{ { 2000000 }, "2" },
-	{ { 3000000 }, "3" },
-	{ { 4000000 }, "4" },
-	{ { 5000000 }, "5" },
-	{ { 6000000 }, "6" },
-	{ { 8000000 }, "8" },
-	{ {10000000 }, "10" },
-	{ {16000000 }, "16" },
-
-};
-static const RegisterDescriptorType ep3000z_reg_03[] = { 
-	{
-		GP_WIDGET_MENU, GP_REG_NO_MASK, 
-		"shutter", N_("Shutter Speed (in seconds)"),
-		VAL_NAME_INIT (ep3000z_reg_03_val_names)
-	}
-};
-#endif
-*/
 
 /*
  * Register 5: aperature settings. 
@@ -282,79 +227,6 @@ static const RegisterDescriptorType ep3000z_reg_33[] = {
 };
 
 /*
- * Register 34: LCD mode / write-only through SIERRA_SUBACTION / ACTION_LCD_MODE
- * This register always contains 1 (OFF).
- * Note: Always swicth off LCD before disconnecting the camera. Otherwise the camera
- * controls won't work, and you will need to replug the cable and switch off the LCD.
- * (This _is_ a documented "feature".)
- * TOCHECK: was not implemented for ep3000z.
- */
-/*
-static const ValueNameType ep3000z_reg_34_val_names[] = {
-	{ { 0x01 }, N_("Off") },
-	{ { 0x02 }, N_("Monitor") },
-	{ { 0x03 }, N_("Normal") },
-};
-static const RegisterDescriptorType ep3000z_reg_34[] = { 
-	{
-		GP_WIDGET_RADIO, GP_REG_NO_MASK, 
-		"lcd-mode", N_("LCD Mode"),
-		VAL_NAME_INIT (ep3000z_reg_34_val_names)
-	}
-};
-*/
-
-/*
- * Register 35: lcd brightness.
- * TOCHECK: was not implemented on ep3000z
- */
-/*static const ValueNameType ep3000z_reg_35_val_names[] = {
-	{ { range: { 0, 7 } }, NULL },
-};
-static const RegisterDescriptorType ep3000z_reg_35[] = { 
-	{
-		GP_WIDGET_RANGE, GP_REG_NO_MASK,
-		"lcd-brightness", N_("LCD Brightness"),
-		VAL_NAME_INIT (ep3000z_reg_35_val_names)
-	}
-};*/
-
-/*
- * Register 38: lcd auto shut off time
- * TOCHECK: was not implemented for ep3000z
- */
-/*static const ValueNameType ep3000z_reg_38_val_names[] = {
-	{ { range: { 30, 600, 30  } }, NULL },
-};
-static const RegisterDescriptorType ep3000z_reg_38[] = { 
-	{
-		GP_WIDGET_RANGE, GP_REG_NO_MASK,
-		"lcd-auto-shutoff", N_("LCD Auto Shut Off (seconds)"),
-		VAL_NAME_INIT (ep3000z_reg_38_val_names)
-	}
-};*/
-
-/*
- * Register 41: time format, read only
- * TOCHECK: was not implemented on ep3000z
- */
-/*
-static const ValueNameType ep3000z_reg_41_val_names[] = {
-	{ { 0 }, N("Off") },
-	{ { 1 }, "yymmdd" },
-	{ { 2 }, "mmddyy" },
-	{ { 3 }, "ddmmyy" },
-};
-static const RegisterDescriptorType ep3000z_reg_41[] = { 
-	{
-		GP_WIDGET_MENU, GP_REG_NO_MASK, 
-		"timefmt", N_("Time format"),
-		VAL_NAME_INIT (ep3000z_reg_41_val_names)
-	}
-};
-*/
-
-/*
  * Register 53: language setting.
  */
 static const ValueNameType ep3000z_reg_53_val_names[] = {
@@ -375,129 +247,6 @@ static const RegisterDescriptorType ep3000z_reg_53[] = {
 		VAL_NAME_INIT (ep3000z_reg_53_val_names)
 	}
 };
-
-
-/*
- * Register 69: exposure compensation.
- * TOCHEC: was not implemented on ep3000z
- */
-/*static const ValueNameType ep3000z_reg_69_val_names[] = {
-	{ { -20 }, "-2.0" },
-	{ { -17 }, "-1.7" },
-	{ { -13 }, "-1.3" },
-	{ { -10 }, "-1.0" },
-	{ { -07 }, "-0.7" },
-	{ { -03 }, "-0.3" },
-	{ {  00 }, " 0" },
-	{ { +03 }, "+0.3" },
-	{ { +07 }, "+0.7" },
-	{ { +10 }, "+1.0" },
-	{ { +13 }, "+1.3" },
-	{ { +17 }, "+1.7" },
-	{ { +20 }, "+2.0" },
-};
-static const RegisterDescriptorType ep3000z_reg_69[] = { 
-	{
-		GP_WIDGET_MENU, GP_REG_NO_MASK, 
-		"exp", N_("Exposure Compensation"),
-		VAL_NAME_INIT (ep3000z_reg_69_val_names)
-	}
-};
-*/
-
-/*
- * Register 70: exposure meter.
- * TOCHECK: was not implemented on ep3000z
- */
-/*static const ValueNameType ep3000z_reg_70_val_names[] = {
-	{ { 0x03 }, N_("Spot") },
-	{ { 0x05 }, N_("Matrix") },
-};
-static const RegisterDescriptorType ep3000z_reg_70[] = { 
-	{
-		GP_WIDGET_RADIO, GP_REG_NO_MASK,
-		"exp-meter", N_("Exposure Metering"), 
-		VAL_NAME_INIT (ep3000z_reg_70_val_names)
-	}
-};*/
-
-/*
- * Register 71: optical zoom value.
- * TOCHECK: was not implemented on ep3000z
- */
-/*
-static const ValueNameType ep3000z_reg_71_val_names[] = {
-	{
-		{ range: { 7.3, 21.0, .1 } }, NULL
-	}
-};
-static const RegisterDescriptorType ep3000z_reg_71[] = { 
-	{
-		GP_WIDGET_RANGE, GP_REG_NO_MASK, 
-		"zoom", N_("Zoom (in millimeters)"),
-		VAL_NAME_INIT (ep3000z_reg_71_val_names)
-	}
-};
-*/
-
-/*
- * Register 72: digital zoom
- * TOCHECK: was not implemented on ep3000z
- */
-/*
-static const ValueNameType ep3000z_reg_72_val_names[] = {
-	{ { 0x0000 }, N_("Off") },
-	{ { 0x0208 }, "1.5x" },
-	{ { 0x0008 }, "2x" },
-	{ { 0x0408 }, "2.5x" },
-};
-static const RegisterDescriptorType ep3000z_reg_72[] = { 
-	{
-		GP_WIDGET_MENU, GP_REG_NO_MASK, 
-		"dzoom", N_("Digital zoom"),
-		VAL_NAME_INIT (ep3000z_reg_72_val_names)
-	}
-};
-*/
-
-/*
- * Register 85: ISO speed, read only
- * TOCHECK: was not implemented on ep3000z
- */
-/*
-static const ValueNameType ep3000z_reg_85_val_names[] = {
-	{ { 0 }, N_("Auto") },
-	{ { 1 }, "100" },
-	{ { 2 }, "200" },
-	{ { 3 }, "400" },
-};
-static const RegisterDescriptorType ep3000z_reg_85[] = { 
-	{
-		GP_WIDGET_MENU, GP_REG_NO_MASK, 
-		"iso", N_("ISO Speed"),
-		VAL_NAME_INIT (ep3000z_reg_85_val_names)
-	}
-};
-*/
-
-/*
- * Register 103: focus position (only applicable in manual focus mode)
- *     1 to 120: macro positions
- *   121 to 240: normal positions
- * TOCHECK: was not implemented on ep3000z
- */
-/*
-static const ValueNameType ep3000z_reg_103_val_names[] = {
-	{ { range: { 1, 240, 1 } }, NULL },
-};
-static const RegisterDescriptorType ep3000z_reg_103[] = { 
-	{
-		GP_WIDGET_RANGE, GP_REG_NO_MASK, 
-		"focus-pos", N_("Focus position"),
-		VAL_NAME_INIT (ep3000z_reg_103_val_names)
-	}
-};
-*/
 
 /*
  * All of the register used to modify picture settings. The register value
